# alphaforge

./: .gitignore  ARCHITECTURE.md  CONCEPTS.md  Makefile  README.md  RESULTS_RECORDED.md  pyproject.toml
config/: backtest.yaml
data_lake_big/altdata/date=2015-01-02/: part.parquet
data_lake_big/altdata/date=2015-01-05/: part.parquet
data_lake_big/altdata/date=2015-01-06/: part.parquet
data_lake_big/altdata/date=2015-01-07/: part.parquet
data_lake_big/altdata/date=2015-01-08/: part.parquet
data_lake_big/altdata/date=2015-01-09/: part.parquet
data_lake_big/altdata/date=2015-01-12/: part.parquet
data_lake_big/altdata/date=2015-01-13/: part.parquet
data_lake_big/altdata/date=2015-01-14/: part.parquet
data_lake_big/altdata/date=2015-01-15/: part.parquet
data_lake_big/altdata/date=2015-01-16/: part.parquet
data_lake_big/altdata/date=2015-01-20/: part.parquet
data_lake_big/altdata/date=2015-01-21/: part.parquet
data_lake_big/altdata/date=2015-01-22/: part.parquet
data_lake_big/altdata/date=2015-01-23/: part.parquet
data_lake_big/altdata/date=2015-01-26/: part.parquet
data_lake_big/altdata/date=2015-01-27/: part.parquet
data_lake_big/altdata/date=2015-01-28/: part.parquet
data_lake_big/altdata/date=2015-01-29/: part.parquet
data_lake_big/altdata/date=2015-01-30/: part.parquet
data_lake_big/altdata/date=2015-02-02/: part.parquet
data_lake_big/altdata/date=2015-02-03/: part.parquet
data_lake_big/altdata/date=2015-02-04/: part.parquet
data_lake_big/altdata/date=2015-02-05/: part.parquet
data_lake_big/security_master/: data.parquet
data_lake_big/security_static/: data.parquet
data_lake_real/security_master/: data.parquet
data_lake_real/security_static/: data.parquet
databricks/: README_DATABRICKS.md  alphaforge_pipeline_notebook.py
docs/: services_free_vs_paid.md
interview/: README.md  portfolio_tracker.py  test_portfolio_tracker.py
src/alphaforge/: __init__.py  cli.py  config.py  logging.py
tests/: conftest.py  test_ml_alpha.py  test_optimizer_constraints.py  test_predictive_edge.py  test_risk_and_costs.py  test_signals_pit.py  test_storage_asof.py
(+6202 files in other folders)
